--- a/package.json
+++ b/package.json
@@ -23,35 +23,36 @@
     "clsx": "^2.0.0",
     "file-saver": "^2.0.5",
     "lodash.throttle": "^4.1.1",
-    "lucide-react": "^0.299.0",
+    "lucide-react": "^0.294.0",
     "nanoid": "^5.0.4",
-    "next": "14.0.4",
+    "next": "^14.0.3",
     "next-themes": "^0.2.1",
+    "peerjs": "^1.5.1",
     "qrcode.react": "^3.1.0",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-loader-spinner": "^6.1.4",
     "simple-peer": "^9.11.1",
+    "socket.io": "^4.7.2",
     "socket.io-client": "^4.7.2",
     "streamsaver": "^2.0.6",
     "tailwind-merge": "^2.1.0",
     "tailwindcss-animate": "^1.0.7",
-    "tailwindcss-animated": "^1.0.1"
+    "typescript": "^5.3.2"
   },
   "devDependencies": {
     "@types/file-saver": "^2.0.7",
     "@types/lodash.throttle": "^4.1.9",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/node": "^20.10.3",
+    "@types/react": "^18.2.42",
+    "@types/react-dom": "^18.2.17",
     "@types/simple-peer": "^9.11.8",
     "@types/streamsaver": "^2.0.4",
-    "autoprefixer": "^10.0.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.0.4",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
-    "typescript": "^5"
+    "autoprefixer": "^10.4.16",
+    "eslint": "^8.55.0",
+    "eslint-config-next": "^14.0.3",
+    "postcss": "^8.4.32",
+    "tailwindcss": "^3.3.6"
   }
 }
